Update Security Swagger
